--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="star-background"></div>
 <h1>PoopBot - 本地基础对战</h1>
 <div id="game-container">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
