--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="star-background"></div>
 <h1>PoopBot - Local Basic Battle</h1>
 <div id="timer" style="color: white; font-size: 1.2em; margin-bottom: 10px;">Time Left: </div>
+<div id="shrink-timer" style="color: #f88; font-size: 1em; margin-bottom: 10px;">Shrink In: </div>
 <div id="game-container">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="ui">
