refactor by Gemini

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div id="star-background"></div>
-<h1>PoopBot - Local Basic Battle</h1>
+<h1>PoopBot</h1>
 <div id="timer" style="color: white; font-size: 1.2em; margin-bottom: 10px;">Time Left: </div>
 <div id="shrink-timer" style="color: #f88; font-size: 1em; margin-bottom: 10px;">Shrink In: </div>
-<div id="ready-container" style="color: white; text-align: center; margin-bottom: 20px;">
+<div id="ready-container" style="color: white; text-align: center; margin-bottom: 20px; display: flex;">
     <p><button id="p1-ready-btn">Player 1 Ready</button> <span id="p1-ready-status">Not Ready</span></p>
     <p><button id="p2-ready-btn">Player 2 Ready</button> <span id="p2-ready-status">Not Ready</span></p>
 </div>
