--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="game-over" style="display: none;">
         <h2>Game Over!</h2>
         <p id="winner-message"></p>
-        <button onclick="prepareForRematch()">Ok</button>
+        <button onclick="hideGameOverScreen()">Ok</button>
     </div>
 </div>
 <script src="game.js"></script>
