--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div id="star-background"></div>
 <h1>PoopBot</h1>
 <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-around;">
-    <div id="timer" style="color: white; font-size: 1.2em; margin-bottom: 10px;">Time Left: </div>
-    <div id="shrink-timer" style="color: #f88; font-size: 1em; margin-bottom: 10px;">Shrink In: </div>
+    <div id="timer" style="color: white; font-size: 1.2em; margin-bottom: 10px;margin-right: 25px;padding: 10px">Time Left: </div>
+    <div id="shrink-timer" style="color: #f88; font-size: 1em; margin-bottom: 10px;padding: 10px">Shrink In: </div>
 </div>
 
 <div id="ready-container" style="color: white; text-align: center; margin-bottom: 20px; display: flex;width: 100%;flex-direction: row; align-items: center; justify-content: center;">
