--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <div id="star-background"></div>
 <h1>PoopBot</h1>
 <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-around;">
-    <div id="timer" style="color: white; font-size: 1.2em; margin-bottom: 10px;margin-right: 25px;padding: 10px">Time Left: </div>
-    <div id="shrink-timer" style="color: #f88; font-size: 1em; margin-bottom: 10px;padding: 10px">Shrink In: </div>
+    <div id="timer" class="timer-box">Time Left: </div>
+    <div id="shrink-timer" class="timer-box shrink">Shrink In: </div>
 </div>
 
-<div id="ready-container" style="color: white; text-align: center; margin-bottom: 20px; display: flex;width: 100%;flex-direction: row; align-items: center; justify-content: center;">
-    <button id="p1-ready-btn" >Player 1 Ready</button> <span id="p1-ready-status" style="margin-right: 20px">Not Ready</span>
-    <button id="p2-ready-btn">Player 2 Ready</button> <span id="p2-ready-status">Not Ready</span>
+<div id="ready-container" class="ready-container">
+    <button id="p1-ready-btn" class="ready-button">Player 1 Ready</button>
+    <span id="p1-ready-status" class="ready-status">Not Ready</span>
+    <button id="p2-ready-btn" class="ready-button">Player 2 Ready</button>
+    <span id="p2-ready-status" class="ready-status">Not Ready</span>
 </div>
 <div id="game-container">
     <canvas id="gameCanvas" width="1280" height="760"></canvas>
@@ -30,7 +32,7 @@
             <div id="p2-charge" class="charge-indicator"></div>
         </div>
     </div>
-    <div id="game-over" style="display: none;">
+    <div id="game-over" class="game-over-screen">
         <h2>Game Over!</h2>
         <p id="winner-message"></p>
         <button onclick="hideGameOverScreen()">Ok</button>
